--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>updatedstyllll change number 2</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Page Title</title>
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <p>updated new</p>
+    </body>
 </html>
