changed the page title and added nav

--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Page Title</title>
+        <title>Workout Tracker</title>
     </head>
+    <header>
+		<nav class="navbar">
+				<a href="push.html">Push</a>
+				<a href="pull.html">Pull</a>
+				<a href="legs.html">Legs</a>
+				<a href="arms.html">Arms</a>
+		</nav>
+	</header>
     <body>
-        <h1>Hello World</h1>
-        <p>updated new</p>
+        <p>Who's gonna carry the boats</p>
     </body>
 </html>
