added login and sign in

--- a/site/index.html
+++ b/site/index.html
@@ -6,13 +6,11 @@
     </head>
     <header>
 		<nav class="navbar">
-				<a href="push.html">Push</a>
-				<a href="pull.html">Pull</a>
-				<a href="legs.html">Legs</a>
-				<a href="arms.html">Arms</a>
+				<a href="signup.html">Create New Account</a>
+				<a href="login.html">Log in</a>
 		</nav>
 	</header>
     <body>
-        <p>Who's gonna carry the boats</p>
+        <p>Who's gonna carry the boats...</p>
     </body>
 </html>
