--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                     <img 
-                    src="./assets/about-pic.png" 
+                    src="assets/about-pic.png" 
                     alt="Profile picture"
                     class="about-pic"
                 />
@@ -84,7 +84,7 @@
                 <div class="about-containers">
                     <div class="details-container">
                         <img 
-                        src="./assets/experience.png" 
+                        src="assets/experience.png" 
                         alt="Experience icon"
                         class="icon"
                         />
@@ -93,7 +93,7 @@
                     </div>    
                     <div class="details-container">
                         <img 
-                        src="./assets/education.png" 
+                        src="assets/education.png" 
                         alt="Education icon"
                         class="icon"
                         />
@@ -113,7 +113,7 @@
             </div>
         </div>
         <img 
-        src="./assets/arrow.png" 
+        src="assets/arrow.png" 
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -130,7 +130,7 @@
         <div class="article-container">
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -141,7 +141,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -152,7 +152,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -163,7 +163,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -174,7 +174,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -185,7 +185,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -201,7 +201,7 @@
         <div class="article-container">
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -212,7 +212,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -223,7 +223,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -234,7 +234,7 @@
           </article>
           <article>
             <img
-              src="./assets/checkmark.png"
+              src="assets/checkmark.png"
               alt="Experience icon"
               class="icon"
             />
@@ -248,7 +248,7 @@
     </div>
   </div>
   <img
-    src="./assets/arrow.png"
+    src="assets/arrow.png"
     alt="Arrow icon"
     class="icon arrow"
     onclick="location.href='./#projects'"
@@ -262,7 +262,7 @@
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/project-1.png"
+            src="assets/project-1.png"
             alt="Project 1"
             class="project-img"
           />
@@ -280,7 +280,7 @@
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/project-2.png"
+            src="assets/project-2.png"
             alt="Project 2"
             class="project-img"
           />
@@ -304,7 +304,7 @@
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/project-3.png"
+            src="assets/project-3.png"
             alt="Project 3"
             class="project-img"
           />
@@ -328,7 +328,7 @@
     </div>
   </div>
   <img
-    src="./assets/arrow.png"
+    src="assets/arrow.png"
     alt="Arrow icon"
     class="icon arrow"
     onclick="location.href='./#contact'"
@@ -340,7 +340,7 @@
   <div class="contact-info-upper-container">
     <div class="contact-info-container">
       <img
-        src="./assets/email.png"
+        src="assets/email.png"
         alt="Email icon"
         class="icon contact-icon email-icon"
       />
@@ -348,7 +348,7 @@
     </div>
     <div class="contact-info-container">
       <img
-        src="./assets/linkedin.png"
+        src="assets/linkedin.png"
         alt="LinkedIn icon"
         class="icon contact-icon"
       />
