--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="assets/profile-pic.png" alt="Greg Jaremko profile pixture">
+            <img src="assets/profile-pic2.png" alt="Greg Jaremko profile pixture">
         </div>
         <div class="section__text">
             <p calss="section__text_p1">Hello, I'm</p>
@@ -75,7 +75,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                     <img 
-                    src="assets/about-pic.png" 
+                    src="assets/profile-pic.png" 
                     alt="Profile picture"
                     class="about-pic"
                 />
