--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <a href="workout-tracker.html" class="project-link">
             <div class="details-container color-container project-card">
               <div class="article-container">
-                <img src="assets/advert2.jpg" alt="Project 2" class="project-img">
+                <img src="assets/advert.jpg" alt="Project 2" class="project-img">
               </div>
               <h2 class="project-title">Social Workout Tracker (Mobile Web App)</h2>
             </div>
