--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -28,7 +28,7 @@
 
     <div class="project-overview">
         <div class="project-image">
-            <img src="assets/advert.png" alt="Social Workout Tracker">
+            <img src="assets/advert.jpg" alt="Social Workout Tracker">
         </div>
         <div class="project-details">
             <h2>Track. Share. Improve.</h2>
