--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <p>1+ years<br />Freelance and personal projects</p>
             </div>
             <div class="details-container">
-              <img src="assets/education.png" alt="Education icon" class="icon">
+              <img src="assets/education2.png" alt="Education icon" class="icon">
               <h3>Education</h3>
               <p>Foundation Degree<br />Software Development</p>
             </div>
