--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#projects">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -67,12 +67,12 @@
         <div class="about-details">
           <div class="about-containers">
             <div class="details-container">
-              <img src="assets/experience2.png" alt="Experience icon" class="icon">
+              <img src="assets/experience.png" alt="Experience icon" class="icon">
               <h3>Experience</h3>
               <p>1+ years<br />Freelance and personal projects</p>
             </div>
             <div class="details-container">
-              <img src="assets/education2.png" alt="Education icon" class="icon">
+              <img src="assets/education.png" alt="Education icon" class="icon">
               <h3>Education</h3>
               <p>Foundation Degree<br />Software Development</p>
             </div>
@@ -94,7 +94,6 @@
         </div>
       </div>
     </div>
-    <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#experience'">
   </section>
 
   <section id="experience">
@@ -168,7 +167,6 @@
         </div>
       </div>
     </div>
-    <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#projects'">
   </section>
 
   <section id="projects">
@@ -182,7 +180,7 @@
           <a href="workout-tracker.html" class="project-link">
             <div class="details-container color-container project-card">
               <div class="article-container">
-                <img src="assets/advert2.jpg" alt="Project 2" class="project-img">
+                <img src="assets/advert.jpg" alt="Project 2" class="project-img">
               </div>
               <h2 class="project-title">Social Workout Tracker (Mobile Web App)</h2>
             </div>
@@ -198,7 +196,6 @@
         </div>
       </div>
     </div>
-    <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contact'">
   </section>
 
   <section id="contact">
