--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
         <div class="about-details">
           <div class="about-containers">
             <div class="details-container">
-              <img src="assets/experience.png" alt="Experience icon" class="icon">
+              <img src="assets/experience2.png" alt="Experience icon" class="icon">
               <h3>Experience</h3>
               <p>1+ years<br />Freelance and personal projects</p>
             </div>
             <div class="details-container">
-              <img src="assets/education.png" alt="Education icon" class="icon">
+              <img src="assets/education2.png" alt="Education icon" class="icon">
               <h3>Education</h3>
               <p>Foundation Degree<br />Software Development</p>
             </div>
