--- a/kennels-website.html
+++ b/kennels-website.html
@@ -95,6 +95,7 @@
                 <div class="indicator"></div>
                 <div class="indicator"></div>
                 <div class="indicator"></div>
+                <div class="indicator"></div>
             </div>
         </div>
     </div>
