--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1 class="title">Greg Jaremko</h1>
       <p class="section__text__p2">Welcome to my Portfolio</p>
       <div class="btn-container">
-        <button class="btn btn-color-1" onclick="window.open('./assets/resume-example.pdf')">
+        <button class="btn btn-color-1" onclick="window.open('./assets/ResumeScholarship.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-2" onclick="location.href='#contact'">
